# get-voters

./: 251231-first-vote-merkle-no-0.err  251231-first-vote-pre-merkle-format.csv  251231-first-vote.err  README.md  get_voters.py  pyproject.toml
src/get_voters/: __init__.py  get_active_lock_delegates.py  get_voters.py  make_bulk_chat_prompt.py  parse_voters.py
votes/25-q4/: 251231-first-vote-chat-bulk.json  251231-first-vote-merkle-no-0.json  251231-first-vote-no-0.csv  251231-first-vote.csv
