[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "get-voters"
version = "0.1.0"
description = "Fetch votes with reasons for DAO proposals using OpenZeppelin Governor interface"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "web3>=6.0.0",
]

[project.scripts]
get-voters = "get_voters.get_voters:main"
parse-voters = "get_voters.parse_voters:main"
make-bulk-chat-prompt = "get_voters.make_bulk_chat_prompt:main"
get-active-lock-delegates = "get_voters.get_active_lock_delegates:main"

[tool.hatch.build.targets.wheel]
packages = ["src/get_voters"]
